--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^1.0.2
+  intl: ^0.17.0
+  bloc: ^8.1.0
+  flutter_bloc: ^8.1.1
+  bloc_concurrency: ^0.2.0
+  freezed_annotation: ^2.2.0
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.2
+  freezed: ^2.2.0
 flutter:
   uses-material-design: true
+flutter_intl:
+  enabled: true
