--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   bloc_concurrency: ^0.2.0
   freezed_annotation: ^2.2.0
   get_it: ^7.2.0
+  provider: ^6.0.4
 
 dev_dependencies:
   flutter_test:
