--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   freezed_annotation: ^2.2.0
   get_it: ^7.2.0
   provider: ^6.0.4
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
