--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   get_it: ^7.2.0
   provider: ^6.0.4
   equatable: ^2.0.5
+  json_annotation: ^4.7.0
 
 dev_dependencies:
   flutter_test:
@@ -28,6 +29,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.3.2
   freezed: ^2.2.0
+  json_serializable: ^6.5.3
 flutter:
   uses-material-design: true
 flutter_intl:
